--- a/index.html
+++ b/index.html
@@ -1,147 +1,170 @@
 <!DOCTYPE html>
 <html lang="en">
 <head>
-  <meta charset="UTF-8">
-  <meta name="viewport" content="width=device-width, initial-scale=1.0">
-  <title>Tanaka Shumba Portfolio</title>
-  <style>
-    * { margin: 0; padding: 0; box-sizing: border-box; font-family: Arial, sans-serif; }
-    body { background-color: #d0f0fd; color: #fff; line-height: 1.6; }
+<meta charset="UTF-8">
+<meta name="viewport" content="width=device-width, initial-scale=1.0">
+<title>Tanaka Shumba - Cybersecurity Portfolio</title>
+<style>
+  /* General Styles */
+  * { margin: 0; padding: 0; box-sizing: border-box; font-family: 'Arial', sans-serif; }
+  body { background-color: #000; color: #fff; line-height: 1.6; }
 
-    a { color: #00ff00; text-decoration: none; }
+  /* Hero Section */
+  .hero {
+    position: relative;
+    height: 100vh;
+    display: flex;
+    justify-content: center;
+    align-items: center;
+    text-align: center;
+    color: #00ff00;
+    background: url('images/dovi.jpg') no-repeat center center/cover;
+  }
+  .hero::after {
+    content: '';
+    position: absolute;
+    top: 0; left: 0; width: 100%; height: 100%;
+    background: rgba(0,0,0,0.7);
+  }
+  .hero-content {
+    position: relative;
+    z-index: 1;
+  }
+  .hero h1 { font-size: 3rem; margin-bottom: 1rem; }
+  .hero p { font-size: 1.2rem; max-width: 700px; margin: 0 auto; color: #ccc; }
 
-    nav {
-      display: flex;
-      justify-content: center;
-      background-color: #00796b;
-      padding: 1rem 0;
-      position: sticky;
-      top: 0;
-      z-index: 1000;
-    }
-    nav a { margin: 0 1.5rem; font-weight: bold; }
+  /* Navigation */
+  nav {
+    position: fixed;
+    top: 0; width: 100%;
+    background: rgba(0,0,0,0.8);
+    display: flex;
+    justify-content: center;
+    padding: 1rem;
+    z-index: 10;
+  }
+  nav a { color: #00ff00; text-decoration: none; margin: 0 1rem; font-weight: bold; }
+  nav a:hover { color: #fff; }
 
-    .hero {
-      background: url('images/dovi.jpg') center/cover no-repeat;
-      height: 100vh;
-      position: relative;
-      display: flex;
-      justify-content: center;
-      align-items: center;
-      text-align: center;
-    }
-    .hero::after {
-      content: '';
-      position: absolute;
-      top:0; left:0; width:100%; height:100%;
-      background-color: rgba(0,0,0,0.4);
-      z-index:1;
-    }
-    .hero-content {
-      position: relative;
-      z-index: 2;
-      max-width: 800px;
-    }
-    .hero-content h1 { font-size: 3rem; color: #00ff00; margin-bottom: 1rem; }
-    .hero-content p { font-size: 1.2rem; color: #fff; margin-bottom: 2rem; }
+  /* Sections */
+  section { padding: 100px 20px; max-width: 1000px; margin: auto; }
+  h2 { color: #00ff00; margin-bottom: 1rem; }
 
-    .btn {
-      padding: 0.8rem 1.5rem;
-      background-color: #00ff00;
-      color: #000;
-      font-weight: bold;
-      border-radius: 5px;
-      transition: 0.3s;
-    }
-    .btn:hover { background-color: #00b300; }
+  /* About Me */
+  .about {
+    display: flex;
+    flex-wrap: wrap;
+    align-items: center;
+    gap: 2rem;
+  }
+  .about img { width: 200px; border-radius: 50%; border: 3px solid #00ff00; }
+  .about-text { flex: 1; }
 
-    section { padding: 5rem 2rem; max-width: 1000px; margin: auto; }
+  /* Projects */
+  .projects { display: grid; grid-template-columns: repeat(auto-fit, minmax(250px, 1fr)); gap: 1.5rem; }
+  .project-card {
+    background: #111;
+    border: 1px solid #00ff00;
+    padding: 1rem;
+    border-radius: 10px;
+    transition: transform 0.2s, box-shadow 0.2s;
+  }
+  .project-card:hover {
+    transform: translateY(-5px);
+    box-shadow: 0 0 15px #00ff00;
+  }
+  .project-card h3 { color: #00ff00; margin-bottom: 0.5rem; font-size: 1.1rem; }
+  .project-card p { font-size: 0.9rem; color: #ccc; }
+  .project-card a { color: #00ff00; text-decoration: none; font-weight: bold; }
+  .project-card a:hover { color: #fff; }
 
-    h2 { font-size: 2rem; color: #00ff00; margin-bottom: 1.5rem; text-align: center; }
+  /* Contact */
+  .contact a { color: #00ff00; margin-right: 1rem; text-decoration: none; }
+  .contact a:hover { color: #fff; }
 
-    .projects {
-      display: grid;
-      grid-template-columns: repeat(auto-fit, minmax(250px, 1fr));
-      gap: 2rem;
-    }
-    .project {
-      background-color: rgba(0,0,0,0.6);
-      padding: 1.5rem;
-      border-radius: 10px;
-      transition: transform 0.3s;
-    }
-    .project:hover { transform: scale(1.05); }
-    .project h3 { margin-bottom: 0.5rem; color: #00ff00; }
-    .project p { font-size: 0.95rem; color: #fff; }
+  /* Animated neon green lines in background */
+  .animated-bg {
+    position: fixed;
+    top: 0; left: 0; width: 100%; height: 100%;
+    pointer-events: none;
+    z-index: 0;
+    background: repeating-linear-gradient(45deg, rgba(0,255,0,0.05) 0, rgba(0,255,0,0.05) 1px, transparent 1px, transparent 20px);
+    animation: moveBg 10s linear infinite;
+  }
+  @keyframes moveBg { 0% { background-position: 0 0; } 100% { background-position: 100px 100px; } }
 
-    .contact { text-align: center; }
-    .contact a {
-      display: inline-block;
-      margin: 0.5rem 1rem;
-      padding: 0.5rem 1rem;
-      background-color: #00ff00;
-      color: #000;
-      border-radius: 5px;
-      font-weight: bold;
-    }
-    .contact a:hover { background-color: #00b300; }
-
-    footer { text-align: center; padding: 2rem 0; font-size: 0.9rem; color: #fff; background-color: #00796b; }
-  </style>
+</style>
 </head>
 <body>
 
-  <nav>
-    <a href="#about">About Me</a>
-    <a href="#projects">Projects</a>
-    <a href="#contact">Contact</a>
-  </nav>
+<div class="animated-bg"></div>
 
-  <section class="hero">
-    <div class="hero-content">
-      <h1>Hey there!</h1>
-      <p>Welcome! This portfolio showcases my cybersecurity projects and skills while highlighting my ambitions to advance in the field.</p>
-      <a href="#projects" class="btn">View Projects</a>
+<nav>
+  <a href="#about">About Me</a>
+  <a href="#projects">Projects</a>
+  <a href="#contact">Contact</a>
+</nav>
+
+<section class="hero">
+  <div class="hero-content">
+    <h1>Hey there!</h1>
+    <p>Welcome to my portfolio! Here, I showcase my cybersecurity projects, highlighting skills in threat detection, penetration testing, and network security. I’m constantly learning and advancing in the field to secure digital landscapes.</p>
+  </div>
+</section>
+
+<section id="about">
+  <h2>About Me</h2>
+  <div class="about">
+    <img src="images/about-me.jpg" alt="Profile Picture">
+    <div class="about-text">
+      <p>Passionate about cybersecurity, I enjoy solving complex security challenges and creating practical solutions. This portfolio reflects both my technical expertise and my ambition to make an impact in the cybersecurity industry.</p>
     </div>
-  </section>
+  </div>
+</section>
 
-  <section id="about">
-    <h2>About Me</h2>
-    <p>I am a cybersecurity professional with practical experience in threat detection, penetration testing, and network security. This portfolio highlights my projects and demonstrates innovative solutions to modern security challenges. I am dedicated to growing professionally and contributing to secure digital landscapes.</p>
-  </section>
-
-  <section id="projects">
-    <h2>My Projects</h2>
-    <div class="projects">
-      <div class="project">
-        <h3><a href="https://github.com/TanakaShumba/MalwareAnalyzer" target="_blank">Malware Analyzer</a></h3>
-        <p>Python script simulating malware detection and analysis in a safe environment.</p>
-      </div>
-      <div class="project">
-        <h3><a href="https://github.com/TanakaShumba/EthicalHackingSim" target="_blank">Ethical Hacking Sim</a></h3>
-        <p>Simulated ethical hacking scripts for learning and demonstration purposes.</p>
-      </div>
-      <div class="project">
-        <h3><a href="https://github.com/TanakaShumba/CloudSecurityChecker" target="_blank">Cloud Security Checker</a></h3>
-        <p>Checks cloud service configurations for common security misconfigurations.</p>
-      </div>
-      <div class="project">
-        <h3><a href="https://github.com/TanakaShumba/BasicPenTest" target="_blank">Basic Pen Test</a></h3>
-        <p>Educational penetration testing and vulnerability scanning Python script.</p>
-      </div>
-      <!-- Add more projects as needed -->
+<section id="projects">
+  <h2>Projects</h2>
+  <div class="projects">
+    <div class="project-card">
+      <h3>Malware Analyzer</h3>
+      <p>Python script to simulate analyzing suspicious files and detecting potential malicious behaviors in a controlled environment.</p>
+      <a href="https://github.com/TanakaShumba/malware-analyzer" target="_blank">View on GitHub</a>
     </div>
-  </section>
+    <div class="project-card">
+      <h3>Ethical Hacking Sim</h3>
+      <p>Python scripts simulating ethical hacking techniques for learning and demonstration purposes.</p>
+      <a href="https://github.com/TanakaShumba/ethical-hacking-sim" target="_blank">View on GitHub</a>
+    </div>
+    <div class="project-card">
+      <h3>Cloud Security Checker</h3>
+      <p>Python script to simulate checking cloud service configurations for common security misconfigurations.</p>
+      <a href="https://github.com/TanakaShumba/cloud-security-checker" target="_blank">View on GitHub</a>
+    </div>
+    <div class="project-card">
+      <h3>Basic Pen Test</h3>
+      <p>Simple Python script for educational penetration testing and vulnerability scanning.</p>
+      <a href="https://github.com/TanakaShumba/basic-pen-test" target="_blank">View on GitHub</a>
+    </div>
+    <div class="project-card">
+      <h3>Simple IDS</h3>
+      <p>A basic IDS/IPS simulation in Python for detecting and preventing attacks.</p>
+      <a href="https://github.com/TanakaShumba/simple-ids" target="_blank">View on GitHub</a>
+    </div>
+    <div class="project-card">
+      <h3>Cybersecurity Lab Series</h3>
+      <p>A collection of labs and scripts designed for hands-on cybersecurity learning.</p>
+      <a href="https://github.com/TanakaShumba/cyber-lab-series" target="_blank">View on GitHub</a>
+    </div>
+  </div>
+</section>
 
-  <section id="contact" class="contact">
-    <h2>Contact Me</h2>
+<section id="contact">
+  <h2>Contact Me</h2>
+  <p class="contact">
     <a href="mailto:tanakashumba04@gmail.com">Email Me</a>
     <a href="https://www.linkedin.com/in/tanakashumba-" target="_blank">LinkedIn</a>
-  </section>
-
-  <footer>
-    © 2025 Tanaka Shumba
-  </footer>
+  </p>
+</section>
 
 </body>
 </html>
